# rojo

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.txt  build.rs  install.ps1  install.sh  rokit.toml
.cargo/: config.toml
.config/: nextest.toml
.cursor/: hooks.json  sync-sources.ps1  sync-sources.sh
.cursor/commands/: audit.md  ci.md  format.md  luau-optimize.md  release.md
.cursor/plans/: ambiguous_path_handling_f2eaef11.plan.md  ambiguous_paths_audit_fixes_9d3ed6da.plan.md  ambiguous_rbxm_container_system_a9505958.plan.md  ambiguous_rbxm_container_tests_654b886e.plan.md  atlas_daemon_python_bot_be6b0651.plan.md  atlas_fork_isolation_ef1d08fd.plan.md  audit_ambiguous_container_fixes_6a267f1f.plan.md  audit_ambiguous_path_handling_30e99d9a.plan.md  audit_ambiguous_paths_d9495fcc.plan.md  audit_ambiguous_paths_followup_00831072.plan.md  audit_rbxm-ambiguous_round_2_182254c0.plan.md  audit_ref_path_system_c21fc130.plan.md  audit_ref_two-way_sync_9e8ce7a8.plan.md  audit_slugify_branch_e913b7dc.plan.md  audit_slugify_pass_3_b11f65a1.plan.md  bump_sync_logging_to_info_3e39ff81.plan.md  cargo_dependency_upgrades_9b14d945.plan.md  changebatcher_encoding_audit_bade61c8.plan.md  compact_json5_arrays_36a8cfab.plan.md  comprehensive_plugin_tests_bdd5b47c.plan.md  connected_mode_test_expansion_5b0c39a3.plan.md  consolidate_filesystem_name_for_f2bdef69.plan.md  dedup_suffix_start_at_2_89e66bf2.plan.md  destructive_syncback_mode_acb8cb54.plan.md  extension-free_ref_paths_b9a68637.plan.md  fix_audit_findings_ca70f773.plan.md  fix_audit_pass_2_c72b80c5.plan.md  fix_infinity_comparison_71fd9057.plan.md  fix_live_syncback_service_properties_d7c2c927.plan.md  fix_ref_audit_issues_746c0c25.plan.md  fix_ref_audit_round_2_07d615d1.plan.md  fix_ref_audit_round_3_f8ae0e39.plan.md  fix_stale_tree_desync_9e74f718.plan.md  fix_stem-level_dedup_8fa9a015.plan.md  fix_sync_system_issues_e569840d.plan.md  fix_test_port_toctou_86726cb4.plan.md  git-based_sync_defaults_be6371b6.plan.md  git-style_change_metadata_9d8c8345.plan.md  git_sync_defaults_audit_557237e0.plan.md  live_syncback_audit_fixes_561d17c7.plan.md  (+35 more)
.cursor/prompts/: Ambiguous Path Handling.txt
.cursor/rules/: atlas-api.mdc  atlas-dedup.mdc  atlas-plugin.mdc  atlas-project.mdc  atlas-rbx-dom.mdc  atlas-src.mdc  atlas-syncback.mdc  atlas.mdc  luau.mdc  persona.mdc  plugin.mdc  python.mdc  rbx-dom.mdc  roblox.mdc  rojo-api.mdc  rojo-project.mdc  rojo-syncback.mdc  rojo.mdc  src.mdc
.github/workflows/: ci.yml  release.yml
.lune/: upload-plugin.luau
benches/: git_metadata.rs
crates/memofs/: Cargo.toml
crates/rojo-insta-ext/: Cargo.toml
plugin/: UploadDetails.json  msgpack.lua  run-tests.server.lua
plugin/http/: Error.lua  Response.lua  init.lua
plugin/log/: init.lua
plugin/rbx_dom_lua/: EncodedValue.lua  allValues.json  database.json  init.lua
plugin/src/: ApiContext.lua  Assets.lua  ChangeMetadata.lua  Config.lua  DiffUtil.lua  DiffUtil.spec.lua  Hungarian.lua  InstanceMap.lua  InstanceMap.stress.spec.lua  McpStream.lua  PatchSet.lua  PatchSet.spec.lua  PatchSet.stress.spec.lua  PatchTree.lua  PatchTree.spec.lua  SHA1.luau  ServeSession.lua  ServeSession.spec.lua  Settings.lua  Types.lua  Version.lua  WhitespaceUtil.lua  XXH32.luau  init.server.lua  invariant.lua  soundPlayer.lua
scripts/: ci.ps1  ci.sh  format.ps1  format.sh  publish-plugin.ps1  publish-plugin.sh  unit-test-plugin.ps1  unit-test-plugin.sh  update-reflection.ps1  update-reflection.sh  watch-build-plugin.ps1  watch-build-plugin.sh
src/: change_processor.rs  git.rs  hungarian.rs  json.rs  lib.rs  logging.rs  main.rs  multimap.rs  path_encoding.rs  project.rs  resolution.rs  roblox_api.rs  rojo_ref.rs  serve_session.rs  variant_eq.rs
src/cli/: build.rs  clone.rs  (+11 more)
tests/: generate_ambiguous_fixtures.rs
tools/atlas-daemon/: pyproject.toml
tools/atlas-daemon/atlas_daemon/: __init__.py  __main__.py  atlas_cli.py  bot.py  config.py  daemon.py  db.py  discord_fmt.py  review.py  review_prompt.txt  security.py
(+709 files in other folders)
